// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = ".;protobuf";
package protobuf;

service MicroServ {
  rpc DoJob(ServRequest) returns (ServReply) {}
}

// 微服务请求
message ServRequest {
  string label = 1; // 服务校验标签
  string params = 2; // json格式数据，微服务读取数据并处理
}

// 微服务响应结果
message ServReply {
  string response = 1; // 微服务返回处理结果
}
